--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,7 +6,8 @@
     </filter>
     <filter-mapping>
         <filter-name>AuthorizationFilter</filter-name>
-        <url-pattern>*.jsp</url-pattern>
+        <url-pattern>/*</url-pattern>
+        
     </filter-mapping>
     <session-config>
         <session-timeout>
