--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.gson-2.8.6.jar=C:\\Users\\Omar Fer\\Downloads\\gson-2.8.6.jar
 file.reference.mssql-jdbc-9.2.1.jre8.jar=C:\\Users\\Omar Fer\\Desktop\\AcaProgra\\SistemaBancario\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre8.jar
 includes=**
 j2ee.compile.on.save=true
@@ -44,7 +45,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-9.2.1.jre8.jar}
+    ${file.reference.mssql-jdbc-9.2.1.jre8.jar}:\
+    ${file.reference.gson-2.8.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
